--- a/source/_posts/落实生产者延伸责任废铅蓄电池污染防治行动方案出炉.md
+++ b/source/_posts/落实生产者延伸责任废铅蓄电池污染防治行动方案出炉.md
@@ -13,8 +13,7 @@ categories:
 根据生态环境部、发展改革委、工业和信息化部等9部委今天（24日）印发《废铅蓄电池污染防治行动方案》（下称《行动方案》），我国将把铅蓄电池污染防治作为打好污染防治攻坚战的重要内容，完善源头严防、过程严管、后果严惩的监管体系，严厉打击涉废铅蓄电池违法犯罪行为，建立规范的废铅蓄电池收集处理体系，有效遏制非法收集处理造成的环境污染。
 根据《行动方案》确定的时间表，到2020年，铅蓄电池生产企业通过落实生产者责任延伸制度实现废铅蓄电池规范收集率达到40%；到2025年，废铅蓄电池规范收集率达到70%；规范收集的废铅蓄电池全部安全利用处置。
 我国是电池生产和消费大国，2015年的统计数据显示，我国电池产量约487.65亿只。目前市场上电池种类较多，其中铅酸蓄电池对环境危害最大。如铅酸电池被拆解后的酸液中包含铅泥，在冶炼过程中又会产生铅渣，处置不当就会污染土壤与地下水。
-24日晚，国家环境保护铅蓄电池生产和回收再生污染防治工程技术中心主任陈中华在接受第一财经记者采访时表示，我国铅蓄电池产业的污染80%集中在回收和流通环节。
-陈中华说，在欧美、日本等技术先进国家，95%使用的铅是再生铅，而我国的再生铅回收不到10%。我国有20万~30万的的个体回收大军，每年非法倒酸约30万吨，尤其是小作坊，对生态环境的影响很大。
+24日晚，国家环境保护铅蓄电池生产和回收再生污染防治工程技术中心主任陈中华在接受第一财经记者采访时表示，我国铅蓄电池产业的污染80%集中在回收和流通环节，规范了流通渠道就规范了产业的健康发展。
 前些年，全国多个铅蓄电池生产地相继爆发“血铅”事件。2018年初，北京环保警察与天津、河北、内蒙古警方展开联合行动，破获一起特大污染环境案。位于北京市通州区的“电池王”王某专门收购废旧汽车电瓶，回收后的废旧电瓶不经任何环保处理直接发往外地地下炼铅厂，电瓶内浓酸直接倾倒，造成上千平方米的土地环境严重污染。警方查处了两个大型地下电瓶回收工厂，抓获犯罪嫌疑人19名，查获危险废物137吨。
 2016年12月，国务院办公厅发布《生产者责任延伸制度推行方案》，率先对铅酸蓄电池等4类产品实施生产者责任延伸制度。
 《行动方案》明确，发展改革委、生态环境部负责制定发布铅酸蓄电池回收利用管理办法，落实生产者延伸责任，并于2019年底前完成。
