--- a/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
@@ -5,9 +5,10 @@ date: 2019-01-24 18:28:54
 tags: 
 categories: 
 ---
-中国中期公告，拟非公开发行股份，购买中期集团等7名交易对方所持国际期货78.45%股权。同时，中国中期拟非公开发行股份募集配套资金。本次交易完成后，公司将直接及间接持有国际期货100%股权，公司的收入规模、盈利水平均大幅度提高。
+岷江水电公告，公司正在筹划重大资产重组。国网信通拟以“云网融合”业务相关资产与公司进行资产重组，拟重组业务主要包括通信网络建设运营运维、云平台及云应用服务等业务。涉及的重组标的包括国网信通所持继远软件100%股权、中电飞华通信67.31%股权、中电启明星75%股权及中电普华信息100%股权。公司拟通过资产置换、发行股份等方式购买上述标的资产。公司股票1月25日起停牌。
 <!-- more -->
 1月24日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+岷江水电公告，公司正在筹划重大资产重组。国网信通拟以“云网融合”业务相关资产与公司进行资产重组，拟重组业务主要包括通信网络建设运营运维、云平台及云应用服务等业务。涉及的重组标的包括国网信通所持继远软件100%股权、中电飞华通信67.31%股权、中电启明星75%股权及中电普华信息100%股权。公司拟通过资产置换、发行股份等方式购买上述标的资产。公司股票1月25日起停牌。
 中国中期公告，拟非公开发行股份，购买中期集团等7名交易对方所持国际期货78.45%股权。同时，中国中期拟非公开发行股份募集配套资金。本次交易完成后，公司将直接及间接持有国际期货100%股权，公司的收入规模、盈利水平均大幅度提高。
 世纪华通发布公告称，近日收到国家市场监督管理总局反垄断局出具的《经营者集中反垄断审查不实施进一步审查决定书》。在决定书中，国家市场监督管理总局反垄断局称，经初步审查，决定不再进一步审查浙江世纪华通收购盛跃网络股权案。公司表示，公司本次重大资产重组现已通过经营者集中反垄断审查，尚需通过中国证监会审核批准后方可实施。
 元力股份公告，公司正在筹划资产出售的事项，预计构成重大资产重组。本次出售的标的资产为公司全资子公司广州冰鸟网络科技有限公司100%股权。
@@ -16,7 +17,11 @@ categories:
 陕西煤业发布业绩快报，公司2018年实现营业总收入573.94亿元，同比增长12.7%；净利润109.94亿元，同比增长5.21%。基本每股收益1.10元。
 电子城披露业绩快报。公司2018年实现营业总收入22.32亿元，同比增长4.61%；净利润4.04亿元，同比下降20.57%。基本每股收益0.36元。
 海航投资公告，预计2018年盈利35,150万元-35,750万元，同比增长2703.87%-2751.73%。
+华北制药发布业绩预告。预计2018年的净利润为1.52亿元左右，同比增加710.25%左右。公司上年同期盈利1876万元。业绩预增主要是由于其他收益及营业外支出等非经常性损益事项所致，影响金额为1.33亿元。
 中信国安预计2018年度净利润为18亿-22亿元，同比增长593.99%-748.20%；净利润增长主要源于非经常性损益。
+创维数字公告称，预计2018年度净利润2.75亿-3.6亿元，同比增长191.51%–281.62%。
+汉鼎宇佑披露2018年度业绩预告。公司预计2018年盈利14,500万元-17,054万元，比上年同期上升70.31%至100.30%。
+*ST 罗顿发布2018年业绩预盈公告称，公司2018年年度业绩预计盈利700万元到1050万元，将实现扭亏为盈。
 海南高速发布业绩预告。预计2018年盈利15,000万元-19,000万元，比上年同期增长59%-101%。公司业绩大幅增长的原因主要是子公司与海南海汽运输集团股份有限公司琼海分公司合作开发项目的土地被政府无偿收回的风险解除，资产减值损失转回。
 顺鑫农业预计2018年度净利润为7亿元-8.33亿元，同比增长60%-90%。业绩变动原因是公司白酒销售市场扩大，销量及销售收入增加。
 云南城投发布业绩预告。预计2018年的净利润为4.5亿元-5亿元，同比增加70%-89%。业绩增长主要原因为公司转让控股子公司满江康旅及昆明七彩公司的部分股权实现投资收益所致，影响净利润约13亿元。
@@ -41,6 +46,7 @@ categories:
 新智认知公告，公司拟回购部分公司股份，回购资金总额不低于1亿元且不超过2亿元，回购价格不超过23元/股。
 天津磁卡公告，预计2018年的净利润约为7100万元到8500万元，同比实现扭亏为盈。公司上年同期亏损5952万元。业绩预盈主要是因为政府征收公司土地，及整体转让子公司海口保税区金卡、海南海卡两家子公司股权非经常性损益事项所致，影响金额约为1.34亿元。
 锦州港公告，拟3000万元-6000万元回购股份，回购价格不超过4.89元/股。
+*ST天业公告，济南高新城市建设发展有限公司及其一致行动人包括济南高新控股集团有限公司、济南综合保税区开发投资集团有限公司、济南高新临空经济区园区开发有限公司等14家企业，于2018年6月6日至2019年1月24日期间，买入公司的股票合计4423.1747万股，占上市公司总股本的5%。济南高新城市建设发展及其一致行动人基于对*ST天业未来业务拓展及转型发展的信心以及对*ST天业长期投资价值的认可而入股，未来12个月内将继续增持*ST天业的股份。
 天银机电公告，控股股东天恒投资与佛山市南海金融高新区投资控股有限公司签署了《股权转让框架意向协议》，拟将其持有公司28.52%的股权转让给南海金控或其指定的第三方。完成后，南海金控将成为公司的控股股东及实际控制人。公司引入国有资本，有助于为公司引进更多政府、产业、金融等战略及业务资源。
 新赛股份公告，公司控股股东艾比湖总公司正在筹划公司股权转让事项，预计该事项可能导致公司实际控制人发生变更。
 汇金股份公告，收到公司控股股东鑫汇金、实际控制人孙景涛、鲍喜波、一致行动人韬略投资通知，其拟向邯郸建投转让持有的部分公司股份，预计本次转让所涉及的股权比例为19.63%-20.94%，该事项将导致公司控股股东、实际控制人发生变更。公司1月25日起停牌。
