--- a/source/_posts/高新产业表现强势，新动能助推经济高质量发展.md
+++ b/source/_posts/高新产业表现强势，新动能助推经济高质量发展.md
@@ -24,8 +24,8 @@ categories:
 除此之外，新动能指数攀升的具体表现之一，是新登记市场主体数量稳定增加，市场活力不断激发。2017年，全国新登记注册市场主体数量增加到1924.9万户，日均注册5.3万户；科技企业孵化器数量增加到4063家。
 国家信息中心首席经济学家祝宝良对记者指出，去年年底的中央经济工作会议提出要增强微观主体活力，发挥企业和企业家主观能动性。而目前创新能力突出的地区也正是营商环境优良的地方。2019年，应该继续加大资本市场的扶持力度，支持鼓励民营企业家做事。
 新动能的增长离不开创新能力的提升。
-上海市信息中心日前发布的《 2019全球科技创新中心评估报告》（下称《报告》），从基础研究、产业技术、创新经济、创新环境四个方面对全球城市做出评价。《报告》显示，入围全球科技创新中心的中国城市排名总体呈明显上升趋势。
-上海市信息中心所长李如心21日告诉记者，统计局发布的数据显示，关于高技术制造、新兴产业的各项指标也印证了他们报告监测的结果。
+上海市经济信息中心日前发布的《 2019全球科技创新中心评估报告》（下称《报告》），从基础研究、产业技术、创新经济、创新环境四个方面对全球城市做出评价。《报告》显示，入围全球科技创新中心的中国城市排名总体呈明显上升趋势。
+上海市经济信息中心所长李如心21日告诉记者，统计局发布的数据显示，关于高技术制造、新兴产业的各项指标也印证了他们报告监测的结果。
 该《报告》显示，与2018年相比，中国入围全球科技创新中心百强的城市数由8个增加为10个，数量已超过德国居全球第二，其中7个排名都有所上升。从战略性新兴产业看，我国大陆地区深圳、北京、杭州排入了信息技术领域的全球20强，北京、上海进入了高端装备的全球20强。企业的创新主体作用得到了充分发挥，北京、深圳、上海的企业研发投入均进入了全球30强。PE、VC、众筹等金融活动十分活跃，企业创新创业活力旺盛，数字经济增长引领全球。
 可以发现，在全球科创中心百强的10个城市中，基本都来自于京津冀、长三角、粤港澳大湾区。具体来看长三角有3个（上海、杭州、南京），粤港澳大湾区有3个（香港、深圳、广州），京津冀的北京排名中国城市第一。
 而在祝宝良看来，如今生产要素、人力、技术也都在往大的城市和几个区域聚集。他说，长三角、珠三角、京津冀这些地区产业转型转型和行业发展迅速，因此有了集聚现象，此外包括贵州 、成都、 武汉等几个点也在发挥集聚效应。“这些地方的营商环境，使得资金、人才、科技等要素越来越集中 ，这样一来可以集中建设，并形成产业集群。”他告诉记者。
