--- a/source/_posts/社论：以科创板的创新引领证券市场深化改革.md
+++ b/source/_posts/社论：以科创板的创新引领证券市场深化改革.md
@@ -20,3 +20,7 @@ categories:
 同时，这项举措也是证券市场发行、上市、信息披露、交易、退市等基础制度改革很好的“试验田”，通过不断探索总结这一过程中可复制可推广的成功经验，供主板、创业板、新三板等其他市场借鉴，从而为进一步深化包括证券市场在内的资本市场改革提供更大的支持。
  
  
+要对标到2020年在重要领域和关键环节改革上取得决定性成果，继续打硬仗，啃硬骨头，确保干一件成一件，为全面完成党的十八届三中全会部署的改革任务打下决定性基础。
+尽管目前法兰克福和都柏林的呼声较高，但法国巴黎有望在交易方面赢得成功，从而成为欧洲新的金融交易中心。
+贺铿认为，重庆是中西部16个省市当中唯一的直辖市，经济中心和金融中心在直辖市一般来说具有一定的优势
+当前最重要的是把习近平总书记关于在上海证券交易所设立科创板并试点注册制的重要指示，作为新时代资本市场深化改革的头等大事，抓紧落实落地。
