--- a/source/_posts/盘前必读｜养老金委托投资已到账6050亿元.md
+++ b/source/_posts/盘前必读｜养老金委托投资已到账6050亿元.md
@@ -5,28 +5,29 @@ date: 2019-01-25 07:34:59
 tags: 
 categories: 
 ---
-17:00德国1月IFO商业景气指数
+周五亚洲股市开市，日经225指数开盘上涨41.87点，涨幅0.20%，报20574.63点。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/8bbf2893f1e82522e223352489f60c57.jpg" />
 当地时间周四，美国三大股指收盘涨跌不一，道琼斯工业指数跌0.09%，纳斯达克指数涨0.68%，芯片股大涨，意法半导体涨逾10%，美光科技涨近7%，英伟达涨5.7%，中概股多数收涨，阿里巴巴涨2.51%。欧洲市场方面，德国DAX指数涨0.53%，法国CAC40指数涨0.65%，英国富时100指数跌0.35%。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
-17:00德国1月IFO商业景气指数
+周五亚洲股市开市，日经225指数开盘上涨41.87点，涨幅0.20%，报20574.63点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/384c7869831e45f77d692fc88d1a1e75.jpg" />
-21:30 美国12月耐用品订单环比初值
+17:00德国1月IFO商业景气指数
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/58494be164cce93944072c70eb2ecbc4.jpg" />
-23:00 美国12月新屋销售(万户)
+21:30 美国12月耐用品订单环比初值
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/e42e2efae53ac937c8db6989c19a0e4d.jpg" />
-无
+23:00 美国12月新屋销售(万户)
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/9d8e2d90a2b37391ca779f15a10018b0.jpg" />
 无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/3fe87f78bb215979ccf7a8b1a382813c.jpg" />
-1月24日，中共中央、国务院发布了《关于支持河北雄安新区全面深化改革和扩大开放的指导意见》，涉及金融机构、个人住房、企业上市、并购重组、外汇资金进出管制等多方面做了政策安排。其中明确指出，优先支持符合条件的雄安新区企业发行上市、并购重组、股权转让、债券发行、资产证券化；个人产权住房以共有产权房为主，严禁大规模开发商业房地产；创新投融资机制，吸引各类社会主体参与雄安新区住房开发建设等。
+无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/10271f820278a7057d79730f65d39711.jpg" />
-1月24日央行网站消息，为提高银行永续债（含无固定期限资本债券）的流动性，支持银行发行永续债补充资本，中国人民银行决定创设央行票据互换工具（Central Bank Bills Swap，CBS），公开市场业务一级交易商可以使用持有的合格银行发行的永续债从中国人民银行换入央行票据。同时，将主体评级不低于AA级的银行永续债纳入中国人民银行中期借贷便利（MLF）、定向中期借贷便利（TMLF）、常备借贷便利（SLF）和再贷款的合格担保品范围。
+1月24日，中共中央、国务院发布了《关于支持河北雄安新区全面深化改革和扩大开放的指导意见》，涉及金融机构、个人住房、企业上市、并购重组、外汇资金进出管制等多方面做了政策安排。其中明确指出，优先支持符合条件的雄安新区企业发行上市、并购重组、股权转让、债券发行、资产证券化；个人产权住房以共有产权房为主，严禁大规模开发商业房地产；创新投融资机制，吸引各类社会主体参与雄安新区住房开发建设等。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/26c0f133a4a2e93412c1839627db0a9b.jpg" />
-在2019年冬季达沃斯论坛上，证监会副主席方星海表示，中国有足够的货币和财政政策工具来缓冲经济下行的压力，无需担心中国经济短期前景。中国一直在持续推进改革。长期来看，中国将迎来科技产业爆发，将极大拉动中国经济增长，对于中国中长期经济发展持乐观态度。
+1月24日央行网站消息，为提高银行永续债（含无固定期限资本债券）的流动性，支持银行发行永续债补充资本，中国人民银行决定创设央行票据互换工具（Central Bank Bills Swap，CBS），公开市场业务一级交易商可以使用持有的合格银行发行的永续债从中国人民银行换入央行票据。同时，将主体评级不低于AA级的银行永续债纳入中国人民银行中期借贷便利（MLF）、定向中期借贷便利（TMLF）、常备借贷便利（SLF）和再贷款的合格担保品范围。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/781b132626e7c57022d1491e8f3a175c.jpg" />
+在2019年冬季达沃斯论坛上，证监会副主席方星海表示，中国有足够的货币和财政政策工具来缓冲经济下行的压力，无需担心中国经济短期前景。中国一直在持续推进改革。长期来看，中国将迎来科技产业爆发，将极大拉动中国经济增长，对于中国中长期经济发展持乐观态度。
 财政部近日印发通知称，创投企业可以选择按单一投资基金核算或者按创投企业年度所得整体核算两种方式之一，对其个人合伙人来源于创投企业的所得计算个人所得税应纳税额。选择按单一投资基金核算的，其个人合伙人从该基金应分得的股权转让所得和股息红利所得，按照20%税率计算缴纳个人所得税；按年度所得整体核算的，其个人合伙人应从创投企业取得的所得，按照“经营所得”项目、5%-35%的超额累进税率计算缴纳个人所得税。
 1月24日中国商务部新闻发言人高峰称，虽然2018年中国消费增速放缓到9%，但在消费总额已经相当庞大情况下，中国消费一年的增量比10年前20%增速下的增量还要多。他表示，中国消费升级趋势不会改变，消费稳步增长势头不会改变，消费潜力释放势头也不会改变。
 国家税务总局印发《关于深入贯彻落实减税降费政策措施的通知》，要求在落实好已出台的小微企业普惠性减税等政策措施的基础上，税务总局配合有关部门抓紧研究完善降低增值税税率、降低社保费费率等实施方案，努力做到实打实、硬碰硬，提高政策的科学性和普惠性，积极推动相关政策尽早公布实施。
