--- a/source/_posts/第一财经年度图书 | 走向未来，叩问今天的自己.md
+++ b/source/_posts/第一财经年度图书 | 走向未来，叩问今天的自己.md
@@ -98,6 +98,8 @@ categories:
 吴志超 第一财经阅读周刊特约编辑
 彭晓玲 第一财经阅读周刊记者
 孙行之 第一财经阅读周刊记者
+第一财经年度图书商业类TOP10，你pick哪一本？
+第一财经年度图书人文类TOP10，你pick哪一本？
  
  
 2019年1月23日，“Yi触即发”第一财经2019新年新品发布会在上海正式举行。新一年度第一财经战略、新刊《第一财经》YiMagazine、第一财经APP付费产品均于此次发布会上首次对外公布和亮相。
