--- a/source/_posts/第一财经年度图书 | 走向未来，叩问今天的自己（文末投票）.md
+++ b/source/_posts/第一财经年度图书 | 走向未来，叩问今天的自己（文末投票）.md
@@ -1,5 +1,5 @@
 ---
-title: 第一财经年度图书 | 走向未来，叩问今天的自己
+title: 第一财经年度图书 | 走向未来，叩问今天的自己（文末投票）
 author: wetech
 date: 2019-01-25 10:36:50
 tags: 
@@ -104,6 +104,6 @@ categories:
  
 2019年1月23日，“Yi触即发”第一财经2019新年新品发布会在上海正式举行。新一年度第一财经战略、新刊《第一财经》YiMagazine、第一财经APP付费产品均于此次发布会上首次对外公布和亮相。
 秉承中化集团“科学至上”的核心理念，中国金茂以“释放城市未来生命力”为己任，始终坚持高端定位和精品路线，在以品质领先为核心的“双轮两翼”战略基础上，聚焦“两驱动、两升级”的城市运营模式，致力于成为中国领先的城市运营商。
-三十而跃之际，星河以更加开放、创新、包容的姿态跃向未来。以城市运营引领者的角色，协同合作伙伴，通力打造因地制宜的城市发展模式，可持续地助力城市升级、推动区域繁荣。
 在房地产行业积极转型，多元化布局发展的今天，佳兆业集团紧抓消费升级和经济结构转型的发展契机，继2017年全年业绩创历史新高后，2018年业绩持续稳健增长。
 东原地产，创新整合地产开发、物业管理、商业运营及外部优质资源，从客户的每一个生活细节出发，提升社区生活品质，致力于成为中国新社区运营模式的创新践行者。
+齐聚夏斌、盛松成、连平、彭文生、刘利刚、刘煜辉、俞平康、邢自强等40余位国内外投行首席经济学家，探讨特朗普新政冲击的全球效应，全球经济的灰犀牛与化解路径、2019年中国经济形势等话题。下一个投资目标应该放在哪里？
