--- a/source/_posts/A股复盘10张图|银行股强势护盘，沪指险守2600点.md
+++ b/source/_posts/A股复盘10张图|银行股强势护盘，沪指险守2600点.md
@@ -1,5 +1,5 @@
 ---
-title: A股复盘9张图|银行股强势护盘，沪指险守2600点
+title: A股复盘10张图|银行股强势护盘，沪指险守2600点
 author: wetech
 date: 2019-01-25 15:12:54
 tags: 
@@ -22,16 +22,18 @@ categories:
 1.工信部印发修订后的《锂离子电池行业规范条件（2018年本）》和《锂离子电池行业规范公告管理暂行办法（2018年本）》。严格控制新上单纯扩大产能、技术水平低的锂离子电池（含配套）项目。鼓励企业推动生产设备联网与数据采集，积极建设企业资源计划（ERP）、制造执行系统（MES）、供应商关系管理（SRM）、仓库管理系统（WMS）等信息化系统，推动企业数字化建设。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/3b877735221a683d86748c7fb3a4bf50.jpg" />
 2.日前，交通运输部办公厅印发《交通运输重大科研基础设施和大型科研仪器开放共享管理暂行办法》，2019年3月1日起实施，有效期5年。明确了推动科研设施和仪器开放共享的主要措施。一是开放共享的载体为部建设的科研设施和仪器开放共享平台。二是对科研设施和仪器集约化管理、信息报送等提出要求。三是规定了管理单位开放共享服务方式、合同约定、收费等事项。四是明确开放共享中的网络安全和知识产权保护等要求。
-<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/9be68a517947bb98e9a3fbba79fac253.jpg" />
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/2557d8b5f2d9cf899a734dd9c08e3d80.jpg" />
 3.1月23日，国家良种重大科研联合攻关调度会在京召开。农业农村部副部长张桃林在会上强调，要强化体制机制创新，有效整合各种资源力量，持续稳定支持攻关平台建设，加快构建高质量、高水平、高效能的现代种业科技创新和产业发展体系。
-<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/80b2d219c732d4ce30f25ec6a12d92c2.jpg" />
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/9be68a517947bb98e9a3fbba79fac253.jpg" />
 4.目前青海省官方已出台《青海省扶持和促进中藏医药发展若干措施》，从加快医疗服务网络建设、提高医疗服务能力、发展养生保健服务、推进传承与创新、推动产业发展等方面，提出25项具体措施，全面推进中藏医药高质量发展。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/80b2d219c732d4ce30f25ec6a12d92c2.jpg" />
 短线来看，震荡中做多力量仍然有力，但指数量能与资金流仍没有充分放大，60日均线做为重要技术分析关口，多空双方或仍有争夺。 
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/d775b408f4e4af0c42dafa041936f757.jpg" />
 短期来看，由于估值的不断下探，市场参与者的心态还是偏积极乐观一些的。板块方面，建议投资者适当关注去年跌幅很大的环保板块，寻找跌幅较大但去年四季度开始基本面已逐渐好转的标的公司进行关注，可能会有超预期的机会。
  
  
+1月24日，人社部表示，2018年基本养老保险基金委托投资的省份和基金委托规模都进一步扩大，养老金委托投资已到账6050亿元。
 方星海表示，该方案将按照中央要求尽快落实。
-收盘 | 沪指剑指2600点 春节前A股会发红包吗？
 分析认为，近期，春节行情已经提前演绎，伴随政策预期升温以及风险偏好的转暖，二月望成为全年极佳做多窗口。
-要对标到2020年在重要领域和关键环节改革上取得决定性成果，继续打硬仗，啃硬骨头，确保干一件成一件，为全面完成党的十八届三中全会部署的改革任务打下决定性基础。
+分析认为，业绩预告结束后，成长风格业绩落地而周期消费进入业绩公告期，则风格可能重回以主题驱动的中小风格占优。
 一方面是退出渠道拓宽收益增加，另一方面科创板流动性、退市制度仍有待确定。
