--- a/source/_posts/证监会对4宗案件做出行政处罚.md
+++ b/source/_posts/证监会对4宗案件做出行政处罚.md
@@ -11,6 +11,7 @@ categories:
 2019年1月25日，证监会召开例行发布会，以下为主要内容：
 证监会对4宗案件做出行政处罚，包括2宗从业人员违法买卖股票案、1宗非法利用他人账户买卖证券案、1宗信息披露违法违规及限制期买卖股票案，涉及ST昌九等公司。
 其中，海通证券前员工朱益宇因违法持有、买卖股票被罚没1086万元，同时禁入证券市场3年。
+证监会新闻发言人常德鹏表示，证监会始终贯彻依法、全面、从严监管理念，不断加强监管执法力量，持续打击各类违法行为，严肃惩办各类违法主体，促进证券期货市场平稳运行发展。
 （以上内容根据现场速记整理而成）
  
  
