--- a/source/_posts/冀鲁豫等地政府债券遭机构疯抢：风险低、收益高于国债40个基点.md
+++ b/source/_posts/冀鲁豫等地政府债券遭机构疯抢：风险低、收益高于国债40个基点.md
@@ -9,7 +9,7 @@ categories:
 <!-- more -->
 陈益刊
 1月，千亿级地方政府债券开闸持续受到银行等机构热捧。
-继河南、山东地方地方政府债券认购倍数超过40倍之后，1月25日河北省地方政府债券认购倍数高达53倍。
+继河南、山东地方政府债券认购倍数超过40倍之后，1月25日河北省地方政府债券认购倍数高达53倍。
 银行等机构“疯抢”地方政府债券，使得债券利率普遍接近政策允许的利率下限。近期发行的地方债利率普遍较区间下限上浮40个基点，即财政部规定的比同期限国债收益率高40个基点。如各省5年期地方债发行利率普遍为3.33%，实际上就是按照政策允许的最低利率发行。
 东方金诚首席宏观分析师王青告诉第一财经记者，2018年9月之前，地方政府债券认购倍数多在3-10倍区间，广东、浙江等发达地区认购倍数较高。2018年8月14日，财政部发文要求地方债承销商投标利率较相同期限国债前五日均值至少上浮40个基点，地方债配置和交易价值大幅提升，投资者认购积极性随之上升。此后，地方债发行普遍出现十几倍甚至几十倍的认购倍数。这种现象一直持续至2019年1月份。
 高倍数认购和低发行利率折射出资金热捧地方政府债的现状。
