--- a/source/_posts/证监会对4宗案件做出行政处罚.md
+++ b/source/_posts/证监会对4宗案件做出行政处罚.md
@@ -9,10 +9,15 @@ categories:
 <!-- more -->
 一财资讯
 2019年1月25日，证监会召开例行发布会，以下为主要内容：
-证监会对4宗案件做出行政处罚，包括2宗从业人员违法买卖股票案、1宗非法利用他人账户买卖证券案、1宗信息披露违法违规及限制期买卖股票案，涉及ST昌九等公司。
-其中，海通证券前员工朱益宇因违法持有、买卖股票被罚没1086万元，同时禁入证券市场3年。
-证监会新闻发言人常德鹏表示，证监会始终贯彻依法、全面、从严监管理念，不断加强监管执法力量，持续打击各类违法行为，严肃惩办各类违法主体，促进证券期货市场平稳运行发展。
-（以上内容根据现场速记整理而成）
+近日，证监会依法对赵敏从业人员违法买卖股票案作出处罚，对其处以60万元罚款；依法对朱益宇从业人员违法买卖股票案作出处罚，没收其违法所得5,437,096.78元，并处以5,437,096.78元罚款，同时对其采取3年市场禁入措施；依法对天一世纪非法利用他人账户买卖证券案作出处罚，责令天一世纪改正，并处以30万元罚款，对直接负责的主管人员周方洁给予警告，并处以10万元罚款。
+江西证监局依法对赵海月及周勇、赵平等一致行动人信息披露违法违规及限制期买卖股票案作出处罚，对赵海月未及时履行报告和信息披露义务的行为给予警告，并处以40万元罚款，对周勇、赵平、赵海月限制期内买卖股票的行为给予警告，并处以共计503万元罚款。
+上述案件中，赵敏作为证券从业人员，借用其父亲赵某毅证券账户，违法持有、买卖股票，违反《证券法》第四十三条的规定；朱益宇作为证券从业人员，借用其配偶许某媛证券账户，违法持有、买卖股票，违反《证券法》第四十三条的规定；天一世纪公司借用他人账户买卖股票，违反《证券法》第八十条的规定；周勇、赵平为夫妻关系，赵海月为周勇和赵平之女，三人利用证券账户买入“昌九生化”，构成一致行动人，赵海月等三人合计买入“昌九生化”股票的数量达到“昌九生化”总股本的5%（赵海月账户的交易触及5%比例线）后未按规定及时履行报告和信息披露义务，且存在限制期内交易“昌九生化”股票的违法行为，上述行为违反《证券法》第八十六条和第三十八条的规定。
+证监会始终贯彻依法、全面、从严监管理念，不断加强监管执法力度，持续打击各类违法行为，严肃惩办各类违法主体，促进证券期货市场健康稳定发展，切实维护广大投资者合法权益。
+近年来，证监会深入领会习近平总书记关于加强社会诚信建设的系列重要指示精神，扎实贯彻落实国务院关于转变政府职能、深化简政放权、创新监管方式、完善社会主义市场经济体制的决策部署，积极顺应政务信息化及全国信用信息共享平台加速建设的有利形势，加速构建跨部门、跨领域、跨地区的诚信约束与协同监管大格局。总体看，以社会信用体系建设为重要依托，以失信联合惩戒与守信联合激励为核心内容，以重点领域精准奖惩为重要手段的资本市场诚信监管协同机制已基本建成，在提升监管有效性和市场诚信水平方面发挥了越来越重要的作用。
+证监会充分运用诚信约束手段，让违法失信者处处受限，引导资本市场各类主体诚信经营、真实披露、合规交易。自2015年牵头签署《关于对违法失信上市公司相关责任主体实施联合惩戒的合作备忘录》以来，已向全国信用信息共享平台推送违法失信信息共计10530条，包含行政处罚信息 4091条、市场禁入信息469条、纪律处分信息5970条，供发改委、人民银行、财政部、海关总署、市场监管总局等近二十个部门，在行政许可、日常监管等工作中参考使用。在地方层面，2018年，多个省市发改委、国税、海关、人社、银行等部门，针对13家被我会采取行政处罚措施的上市公司，在政府采购、补贴性资金支持、银行授信、海关认证、评优评先等多个领域依法采取54项限制性措施，让违法者付出沉重代价，实现了违法失信高成本与社会治理高效率的有机统一。
+2018年，证监会新参与签署了针对政府采购、科研、公共资源交易、出入境检验检疫、知识产权、社会保险、文化、医疗、旅游等21个领域失信行为的部际联合惩戒备忘录及针对交通运输工程建设领域守信行为的联合激励备忘录，并与市场监管总局、民航局分别签署专项合作协议，对严重违法失信企业专门加强信息交流和联合惩戒。联合民航局、铁路总公司，限制逾期不履行公开承诺的上市公司相关责任主体、不缴纳证券期货行政罚没款的当事人乘坐民用航空器和火车高级别席位。
+截至2018年底，证监会累计参与签署诚信联合奖惩备忘录50份，资本市场诚信数据库已采集部际共享信息千万余条，涵盖司法、税务、海关、安监、市场监管等社会经济主要领域。2018年证监会行政许可审核中，对存在不良记录要求核实说明的123起，责令更换不良记录人选11起，作出不予许可决定的2起，许可申请人因此主动撤回申请的5起。对多家存在失信记录的企业作出差异化的现场检查安排，对多名存在违法失信记录的违法当事人加重处罚甚至顶格处罚。2018年6月以来，对逾期不缴纳证监会罚款、逾期不履行上市公司相关公开承诺的95名严重失信人员，在“信用中国”网站进行公示并实施“限乘限飞”，催缴罚没款1.42亿元。
+下一步，证监会将继续立足资本市场改革发展稳定大局，按照社会信用体系建设部际联席会议的统筹规划，结合资本市场实际情况，积极拓展跨部门信息共享与联合奖惩，不断丰富诚信监管工具箱，进一步提高市场诚信水平。
  
  
 证监会对6宗内幕交易案做出行政处罚，涉及现代制药、华闻传媒、曲江文旅、阳光股份、*ST狮头等。
