--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -21,13 +21,18 @@ categories:
 建投能源披露2018年度业绩预告，预盈4亿元，同比增长137.55%。河北省全社会用电需求持续增长，公司控股发电机组平均利用小时同比提高，发电量同比增加。
 中国石化公告，2018年营业收入28816亿元，同比增长22.09%；净利润624亿元，同比增长22.04%。
 招商蛇口披露2018年度业绩预告，盈利145亿元–155亿元，同比增15%-22%，基本每股收益约1.79元-1.92元，业绩同比增长主要系社区开发业务毛利同比增加约33亿元，园区开发业务毛利同比增加约10亿元。
+中信建投发布业绩快报称，2018年度实现营收109亿元，同比下降3.5%；实现净利润30.87亿元，同比下降23.11%。
 光大证券公告，预计2018年实现营业收入77.91亿元，同比下降20.81%；净利润13.47亿元，同比下降55.34%。基本每股收益0.29元。报告期内，市场信用风险事件频发，公司对存在减值迹象的资产计提重大单项资产减值准备累计5.53亿元。
+深康佳A披露2018年度业绩预告称，预盈2.8亿元至3.5亿元，同比下降93.08%至94.46%。2017年，公司转让深圳市康侨佳城置业投资有限公司70%股权产生较大的投资收益。2018年，公司无类似的大额非经常性收益。
 太平洋公告，预计2018年的净利润亏损12亿元到14亿元。业绩预亏的主要原因在于：由于市场低迷，交易对手违约，公司计提大额资产减值准备共计9.72亿元，影响公司2018 年净利润约7.29亿元；受市场行情冲击，股票投资业务持续下滑；由于信用违约等因素，资产管理业务投资的产品净值下跌，资产管理业务亏损。
 福田汽车公告，预计2018年净利润亏损32亿元左右。公司上年同期盈利1.12亿元。业绩预亏的主要原因在于：宝沃业务受市场影响，广告促销费同比增长，销量下滑，导致业绩同比大幅增亏；大客车订单签订时间晚于预期，北京公交大客户订单2790台于2018年12月底签订，于2019年陆续交付产生收益；融资额较上年增加，财务费用同比增加；研发投入同比增加，开发支出转无形资产摊销增加。
 江阴银行公告，1月25日，股东江阴市长达钢铁有限公司告知公司，因近日其通过集中竞价方式增持了公司287.69万股，截至目前，其合计持有公司4.41%股权，成为公司第一大股东。第一大股东变更后公司仍无控股股东、实际控制人。
 华东重机公告，持股16.81%的公司董事的周文元，拟6个月内，通过集中竞价或大宗交易等方式增持公司股票，金额不低于5000万元，增持价格不超过8.88元/股。华东重机最新收报5.17元/股。
+天通股份公告，实控人潘建清的配偶杜海利（同为实际控制人）通过大宗交易方式受让了公司第一期员工持股计划所持有的10,740,122股公司股份，占公司目前总股本的1.08%，成交价格为5.80元/股。本次增持后，公司实际控制人及其一致行动人持有公司的股权比例为24.56%。
 天安新材公告，合计持股10.16%的公司董监高沈耀亮、胡林、徐芳、白秀芬、黎华强、袁文华，计划15个交易日后的6个月内合计减持不超过167万股，占公司总股本的1.14%。
 华西股份公告，持股44.20%的股东华西集团，拟自2019年1月28日至2019年2月28日，通过大宗交易方式，减持不超过3200万股（含本数），占总股本3.61%。
+春秋电子公告，持股7.30%的股东海宁春秋计划减持不超过1150.8万股，占公司总股本的6%。
+华菱精工公告，股东田三红拟自本公告披露之日起15个交易日后6个月内，通过集中竞价的方式合计减持不超过2,666,800股，减持比例不超过公司总股本的2%。九鼎投资拟减持共计不超过8,000,000股，即不超过公司总股本的6%。
 紫鑫药业公告，因近期股价出现非理性波动，控股股东康平公司与一致行动人仲维光质押的公司股票部分已触及平仓线，相关质权人可能对康平公司与仲维光先生已触及平仓线的部分股票进行平仓处理。本次被动减持数量不超过3842.28万股（即不超过公司股份总数的3%）。截止公告日，康平公司及仲维光持有44.02%股份；其中，处于质押状态的股份占公司总股本的44.02%。
 中国石化公告，联合石化在采购进口原油过程中，由于对国际油价走势判断失误，部分套期保值业务的交易策略失当，造成某些场内原油套期保值业务的期货端在油价下跌过程中产生损失。2018年联合石化经营亏损约人民币46.5亿元；同期，与国际标杆油价相比，联合石化为公司所属炼油企业采购进口原油实货节省成本约人民币64亿元。
 得润电子公告，子公司科世得润已被一汽-大众汽车有限公司确定为一汽大众MEB低压电池包线束及奥迪B9 ABS线束项目的供应商，后续将展开各项准备工作。
