--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -13,6 +13,10 @@ categories:
 酒鬼酒披露2018年度业绩快报，公司营业收入11.87亿元，同比增长35.13%，主要系华中及华北地区销售收入增幅较大；净利润2.25亿元，同比增27.94%。基本每股收益0.69元。
 长城汽车披露业绩快报，公司2018年实现营业总收入994.69亿元，同比下降1.68%；净利润53.54亿元，同比增长6.51%。基本每股收益0.59元。基于宏观经济发展、汽车行业整体需求以及公司新产品推出情况，公司将2019年度的销量目标定为120万辆。
 东方证券披露业绩快报，公司2018年实现营业总收入103.01亿元，同比下降2.19%；净利润12.39亿元，同比下降65.13%。基本每股收益0.18元。
+胜利精密下修业绩预告，原先预计2018年净利3.1亿元至4.03亿元，修正为亏损4.4亿元—3.6亿元。
+建设机械发布业绩预告。公司预计2018年度归属于上市公司股东的净利润与上年同期相比，预计增加12,700万元左右，同比增加556.80%左右。2018年度，公司扩大建筑起重机械租赁业务规模，子公司上海庞源机械有限公司塔式起重机年度平均吨米出租率以及平均吨米租金均达历史最好水平，有力地提升了公司的经营业绩。
+中际旭创披露2018年度业绩预告，预盈5.99亿元至6.46亿元，同比增长271%-300%。报告期内，公司合并范围较上年同期发生改变，本期公司合并报表范围包括母公司、全资子公司苏州旭创及中际智能。
+苏博特公告，公司预计2018年的净利润为2.58亿元左右，同比增加93%左右。业绩增长主要原因为主营业务收入增长及收到房屋征收补偿款。
 三一重工公告，预计2018年度实现归属于上市公司股东的净利润为590,000万元到632,000万元，与上年同期相比将增加380,775万元到422,775万元，同比增加182%到202%。
 上海钢联披露2018年度业绩预告，预盈1.14亿元至1.29亿元，同比增长137.14%—167.13%。基于客户和会员数的稳定增长及品牌影响力的不断提升，公司各类资讯和数据业务增长态势向好，收入和利润水平稳定增长。
 华能水电公告，预计2018年的净利润同比增加154%-174%。公司上年同期盈利21.89亿元。业绩预增主要原因：一是新增发电机组投产；二是电力需求增长；三是2018年澜沧江流域全年来水量较去年同比增加。
@@ -23,21 +27,27 @@ categories:
 招商蛇口披露2018年度业绩预告，盈利145亿元–155亿元，同比增15%-22%，基本每股收益约1.79元-1.92元，业绩同比增长主要系社区开发业务毛利同比增加约33亿元，园区开发业务毛利同比增加约10亿元。
 中信建投发布业绩快报称，2018年度实现营收109亿元，同比下降3.5%；实现净利润30.87亿元，同比下降23.11%。
 光大证券公告，预计2018年实现营业收入77.91亿元，同比下降20.81%；净利润13.47亿元，同比下降55.34%。基本每股收益0.29元。报告期内，市场信用风险事件频发，公司对存在减值迹象的资产计提重大单项资产减值准备累计5.53亿元。
+东北证券披露2018年度业绩预告，预盈2亿至3亿元，同比下降55%-70%。受市场变动影响，公司计提的资产减值损失金额较上年同期大幅增加，主要是可供出售金融资产及股票质押项目导致，影响金额约为5亿元。
 深康佳A披露2018年度业绩预告称，预盈2.8亿元至3.5亿元，同比下降93.08%至94.46%。2017年，公司转让深圳市康侨佳城置业投资有限公司70%股权产生较大的投资收益。2018年，公司无类似的大额非经常性收益。
 太平洋公告，预计2018年的净利润亏损12亿元到14亿元。业绩预亏的主要原因在于：由于市场低迷，交易对手违约，公司计提大额资产减值准备共计9.72亿元，影响公司2018 年净利润约7.29亿元；受市场行情冲击，股票投资业务持续下滑；由于信用违约等因素，资产管理业务投资的产品净值下跌，资产管理业务亏损。
 福田汽车公告，预计2018年净利润亏损32亿元左右。公司上年同期盈利1.12亿元。业绩预亏的主要原因在于：宝沃业务受市场影响，广告促销费同比增长，销量下滑，导致业绩同比大幅增亏；大客车订单签订时间晚于预期，北京公交大客户订单2790台于2018年12月底签订，于2019年陆续交付产生收益；融资额较上年增加，财务费用同比增加；研发投入同比增加，开发支出转无形资产摊销增加。
+雪莱特公告，公司控股股东柴国生拟将其持有的公司股份5000万股（约占总股本6.43%）转让给广州启录投资咨询有限公司，完成后，广州启录投资咨询有限公司成为公司战略投资者。
+三维丝公告，周口城投公司1月7日至1月25日期间增持了公司5%股权，增持目的为看好三维丝整体发展。同时，计划未来12个月内增加在三维丝中拥有权益的股份不少于总股数的5%。但未来12个月内，周口城投公司没有获得三维丝控制权的目的。
 江阴银行公告，1月25日，股东江阴市长达钢铁有限公司告知公司，因近日其通过集中竞价方式增持了公司287.69万股，截至目前，其合计持有公司4.41%股权，成为公司第一大股东。第一大股东变更后公司仍无控股股东、实际控制人。
 华东重机公告，持股16.81%的公司董事的周文元，拟6个月内，通过集中竞价或大宗交易等方式增持公司股票，金额不低于5000万元，增持价格不超过8.88元/股。华东重机最新收报5.17元/股。
 天通股份公告，实控人潘建清的配偶杜海利（同为实际控制人）通过大宗交易方式受让了公司第一期员工持股计划所持有的10,740,122股公司股份，占公司目前总股本的1.08%，成交价格为5.80元/股。本次增持后，公司实际控制人及其一致行动人持有公司的股权比例为24.56%。
 天安新材公告，合计持股10.16%的公司董监高沈耀亮、胡林、徐芳、白秀芬、黎华强、袁文华，计划15个交易日后的6个月内合计减持不超过167万股，占公司总股本的1.14%。
 华西股份公告，持股44.20%的股东华西集团，拟自2019年1月28日至2019年2月28日，通过大宗交易方式，减持不超过3200万股（含本数），占总股本3.61%。
 春秋电子公告，持股7.30%的股东海宁春秋计划减持不超过1150.8万股，占公司总股本的6%。
+先达股份公告，股东深圳松禾与南通松禾为一致行动人，合计持股7.73%。上述股东拟在未来6个月内，减持公司股份共计不超过6,720,000股，即不超过总股本的6%。
 华菱精工公告，股东田三红拟自本公告披露之日起15个交易日后6个月内，通过集中竞价的方式合计减持不超过2,666,800股，减持比例不超过公司总股本的2%。九鼎投资拟减持共计不超过8,000,000股，即不超过公司总股本的6%。
 紫鑫药业公告，因近期股价出现非理性波动，控股股东康平公司与一致行动人仲维光质押的公司股票部分已触及平仓线，相关质权人可能对康平公司与仲维光先生已触及平仓线的部分股票进行平仓处理。本次被动减持数量不超过3842.28万股（即不超过公司股份总数的3%）。截止公告日，康平公司及仲维光持有44.02%股份；其中，处于质押状态的股份占公司总股本的44.02%。
 中国石化公告，联合石化在采购进口原油过程中，由于对国际油价走势判断失误，部分套期保值业务的交易策略失当，造成某些场内原油套期保值业务的期货端在油价下跌过程中产生损失。2018年联合石化经营亏损约人民币46.5亿元；同期，与国际标杆油价相比，联合石化为公司所属炼油企业采购进口原油实货节省成本约人民币64亿元。
 得润电子公告，子公司科世得润已被一汽-大众汽车有限公司确定为一汽大众MEB低压电池包线束及奥迪B9 ABS线束项目的供应商，后续将展开各项准备工作。
 盘龙药业公告，中国中西医结合学会骨伤科专业委员会组织编写的《膝骨关节炎中西医结合诊疗指南》发布，公司研发生产的专利产品——盘龙七片被收录其中，成为该指南推荐中成药。
 井神股份公告，公司证券简称将于1月31日起变更为“苏盐井神”，证券代码保持不变。
+龙马环卫公告，公司中标水城县环卫一体化外包项目，服务时间20年，合同年化金额7157.55万元/年，合同总金额14.32亿元(预估)。
+龙蟒佰利公告，公司与奥图泰（芬兰）有限公司签署《战略合作协议》，对公司现有生产工艺及设备进行优化与改进，为公司战略项目的顺利实施提供技术支持，优化产品结构。奥图泰是一家在火法及湿法冶金领域全球领先的工艺技术公司。
  
  
 1月24日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
