--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -13,6 +13,7 @@ categories:
 酒鬼酒披露2018年度业绩快报，公司营业收入11.87亿元，同比增长35.13%，主要系华中及华北地区销售收入增幅较大；净利润2.25亿元，同比增27.94%。基本每股收益0.69元。
 长城汽车披露业绩快报，公司2018年实现营业总收入994.69亿元，同比下降1.68%；净利润53.54亿元，同比增长6.51%。基本每股收益0.59元。基于宏观经济发展、汽车行业整体需求以及公司新产品推出情况，公司将2019年度的销量目标定为120万辆。
 东方证券披露业绩快报，公司2018年实现营业总收入103.01亿元，同比下降2.19%；净利润12.39亿元，同比下降65.13%。基本每股收益0.18元。
+国海证券发布业绩快报称，2018年实现营收21.17亿元，同比下降20.39%；实现净利润8535.7万元，同比下降77.28%。
 胜利精密下修业绩预告，原先预计2018年净利3.1亿元至4.03亿元，修正为亏损4.4亿元—3.6亿元。
 建设机械发布业绩预告。公司预计2018年度归属于上市公司股东的净利润与上年同期相比，预计增加12,700万元左右，同比增加556.80%左右。2018年度，公司扩大建筑起重机械租赁业务规模，子公司上海庞源机械有限公司塔式起重机年度平均吨米出租率以及平均吨米租金均达历史最好水平，有力地提升了公司的经营业绩。
 中际旭创披露2018年度业绩预告，预盈5.99亿元至6.46亿元，同比增长271%-300%。报告期内，公司合并范围较上年同期发生改变，本期公司合并报表范围包括母公司、全资子公司苏州旭创及中际智能。
