--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -32,6 +32,8 @@ categories:
 深康佳A披露2018年度业绩预告称，预盈2.8亿元至3.5亿元，同比下降93.08%至94.46%。2017年，公司转让深圳市康侨佳城置业投资有限公司70%股权产生较大的投资收益。2018年，公司无类似的大额非经常性收益。
 太平洋公告，预计2018年的净利润亏损12亿元到14亿元。业绩预亏的主要原因在于：由于市场低迷，交易对手违约，公司计提大额资产减值准备共计9.72亿元，影响公司2018 年净利润约7.29亿元；受市场行情冲击，股票投资业务持续下滑；由于信用违约等因素，资产管理业务投资的产品净值下跌，资产管理业务亏损。
 福田汽车公告，预计2018年净利润亏损32亿元左右。公司上年同期盈利1.12亿元。业绩预亏的主要原因在于：宝沃业务受市场影响，广告促销费同比增长，销量下滑，导致业绩同比大幅增亏；大客车订单签订时间晚于预期，北京公交大客户订单2790台于2018年12月底签订，于2019年陆续交付产生收益；融资额较上年增加，财务费用同比增加；研发投入同比增加，开发支出转无形资产摊销增加。
+荣泰健康公告，公司拟回购股份，回购金额不低于1亿元不超过2亿元；回购价格为不超39元/股；回购的期限为自股东大会审议通过之日起12个月内；回购股份将用于股权激励计划。
+华西股份公告，持股44.20%的股东华西集团，拟自2019年1月28日至2019年2月28日，通过大宗交易方式，减持不超过3200万股，占总股本3.61%。
 雪莱特公告，公司控股股东柴国生拟将其持有的公司股份5000万股（约占总股本6.43%）转让给广州启录投资咨询有限公司，完成后，广州启录投资咨询有限公司成为公司战略投资者。
 三维丝公告，周口城投公司1月7日至1月25日期间增持了公司5%股权，增持目的为看好三维丝整体发展。同时，计划未来12个月内增加在三维丝中拥有权益的股份不少于总股数的5%。但未来12个月内，周口城投公司没有获得三维丝控制权的目的。
 江阴银行公告，1月25日，股东江阴市长达钢铁有限公司告知公司，因近日其通过集中竞价方式增持了公司287.69万股，截至目前，其合计持有公司4.41%股权，成为公司第一大股东。第一大股东变更后公司仍无控股股东、实际控制人。
@@ -44,6 +46,7 @@ categories:
 华菱精工公告，股东田三红拟自本公告披露之日起15个交易日后6个月内，通过集中竞价的方式合计减持不超过2,666,800股，减持比例不超过公司总股本的2%。九鼎投资拟减持共计不超过8,000,000股，即不超过公司总股本的6%。
 紫鑫药业公告，因近期股价出现非理性波动，控股股东康平公司与一致行动人仲维光质押的公司股票部分已触及平仓线，相关质权人可能对康平公司与仲维光先生已触及平仓线的部分股票进行平仓处理。本次被动减持数量不超过3842.28万股（即不超过公司股份总数的3%）。截止公告日，康平公司及仲维光持有44.02%股份；其中，处于质押状态的股份占公司总股本的44.02%。
 中国石化公告，联合石化在采购进口原油过程中，由于对国际油价走势判断失误，部分套期保值业务的交易策略失当，造成某些场内原油套期保值业务的期货端在油价下跌过程中产生损失。2018年联合石化经营亏损约人民币46.5亿元；同期，与国际标杆油价相比，联合石化为公司所属炼油企业采购进口原油实货节省成本约人民币64亿元。
+暴风集团公告，近日公司关注到“北京法院将暴风集团列入一系列被执行人名单”等相关报道。对此，公司表示，媒体报道中称“自2019年1月3日至1月11日，暴风集团悄然增加了十几条被执行人信息”系公司与离职员工的劳动纠纷进入执行阶段，涉案金额合计69.04万元。公司正积极与员工沟通解决，法院将解除执行措施。截至目前，公司并未被列入失信被执行人名单。
 得润电子公告，子公司科世得润已被一汽-大众汽车有限公司确定为一汽大众MEB低压电池包线束及奥迪B9 ABS线束项目的供应商，后续将展开各项准备工作。
 盘龙药业公告，中国中西医结合学会骨伤科专业委员会组织编写的《膝骨关节炎中西医结合诊疗指南》发布，公司研发生产的专利产品——盘龙七片被收录其中，成为该指南推荐中成药。
 井神股份公告，公司证券简称将于1月31日起变更为“苏盐井神”，证券代码保持不变。
