--- a/source/_posts/银保监会：保险资金可以投资银行发行的二级资本债券和永续债.md
+++ b/source/_posts/银保监会：保险资金可以投资银行发行的二级资本债券和永续债.md
@@ -1,5 +1,5 @@
 ---
-title: 银保监会：保险资金可以投资银行发行的二级资本债券和和永续债
+title: 银保监会：保险资金可以投资银行发行的二级资本债券和永续债
 author: wetech
 date: 2019-01-25 22:00:31
 tags: 
@@ -26,8 +26,8 @@ categories:
 2019年1月25日
  
  
+中国银行在银行间债券市场成功发行400亿元无固定期限资本债券。
+2019年商业银行对资本的渴求也越加迫切，随着各路“充电宝”准备待续，一波密集补血潮正在到来。
 银保监会将允许保险机构投资符合条件的银行二级资本债券和无固定期限资本债券。
 日前，银保监会副主席王兆星、曹宇在《中国金融》撰文。文章提出，要进一步扩大对内对外开放。包括要继续引导民间资本依法合规有序进入银行业，继续推动民营银行常态化发展。
 这是我国商业银行获批发行的首单此类新的资本工具，有利于进一步充实资本，优化资本结构，扩大信贷投放空间，提升风险抵御能力。
-保险业总杠杆率逐渐下降，业务结构继续优化，内生增长动力进一步增强，实际资本、偿付能力溢额等指标持续上升，抵御风险能力不断增强。
-李克穆强调，保险业的首要功能是保障，不是其他。
